# dataops

./: .env.example  .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml  quality_checks.yaml.example  school_checks.yaml
src/dataops/: alert.py  cli.py  config.py  dag.py  dashboard.py  data.py  logging.py  quality.py  utils.py
